--- a/index.html
+++ b/index.html
@@ -61,16 +61,17 @@
                         <div class="col-lg-5 col-md-7">
                             <div class="switchable__text">
                                 <h2>
-                                    Beste verkeersleider,
+                                    Beste gebruiker,
                                 </h2>
                                 <p >
-                                    De nieuwe verkeersvoorspeller heeft een poosje online gestaan. Op basis van jullie feedback en onze eigen testen hebben we geconstateerd dat de voorspellingen nog niet goed genoeg zijn voor toepassing binnen de verkeerscentrale. Met name de files op de snelweg maken onrealistische sprongen. Omdat we willen voorkomen dat jullie verkeerde beslissingen maken op basis van verkeerde voorspellingen is de applicatie de komende paar weken offline.
+                                    De nieuwe in ontwikkeling zijnde verkeersvoorspeller 2.0 heeft een poosje online gestaan. Op basis van jullie feedback en onze eigen testen hebben we geconstateerd dat de voorspellingen helaas nog niet goed genoeg zijn voor toepassing binnen de verkeerscentrale. Met name de files op de snelweg maken onrealistische sprongen. Omdat we willen voorkomen dat jullie verkeerde beslissingen nemen op basis van verkeerde voorspellingen is de applicatie komende maand offline.
                                 </p>
                                 <p >
-                                    Maar niet getreurd! Wij zijn hard aan het sprinten en we komen terug met een betere versie, waarin de voorspellingen veel beter aansluiten op de actuele file. De cases die jullie hebben aangedragen gebruiken wij om onze algoritmes te verbeteren. Zodra de voorspellingen op niveau zijn, gaan we door met het bouwen van coole functionaliteit en het verbeteren van het gebruiksgemak.
+                                    Maar …… niet getreurd! Wij zijn hard aan het sprinten en we komen terug met een betere versie, waarin de voorspellingen veel beter aansluiten op de actuele file. De cases die jullie hebben aangedragen gebruiken wij om onze algoritmes te verbeteren. Zodra de voorspellingen op niveau zijn, gaan we door met het bouwen van coole functionaliteit en het verbeteren van het gebruiksgemak. We willen het moment van weer online zetten van de applicatie koppelen aan een bijeenkomst waarin we nog eens uitleg geven over wat we gedaan hebben en stilstaan bij jullie ideeën voor het vervolg. Een uitnodiging hiervoor volgt op korte termijn.
                                 </p>
                                 <h5>
                                     Met vriendelijke groet,<br>
+                                    Team Fileradar <br>
 
                                     Chris van Hinsbergen en Frank Zuurbier
                                 </h5>
