--- a/index.html
+++ b/index.html
@@ -38,12 +38,7 @@
             <div class="bar bar--sm visible-xs">
                 <div class="container">
                     <div class="row">
-                        <div class="col-3 col-md-2">
-                            <a href="index.html">
-                                <img class="logo logo-dark" alt="logo" src="img/logo-dark.png" />
-                                <img class="logo logo-light" alt="logo" src="img/logo-light.png" />
-                            </a>
-                        </div>
+                       
                         <div class="col-9 col-md-10 text-right">
                             <a href="#" class="hamburger-toggle" data-toggle-class="#menu1;hidden-xs">
                                 <i class="icon icon--sm stack-interface stack-menu"></i>
@@ -69,6 +64,8 @@
                     <hr>
 
                 </div>
+            </section>
+            <section>
                 <div class="container pos-vertical-center">
                     <div class="row justify-content-around">
                         
