--- a/index.html
+++ b/index.html
@@ -18,27 +18,17 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
     <body class=" ">
-        <!-- Load Facebook SDK for JavaScript -->
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js#xfbml=1&version=v2.12&autoLogAppEvents=1';
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-
-<!-- Your customer chat code -->
-<div class="fb-customerchat"
-  attribution=setup_tool
-  page_id="417784748427787">
-</div>
         <a id="start"></a>
         <div class="nav-container ">
             <div class="bar bar--sm visible-xs">
                 <div class="container">
                     <div class="row">
-                       
+                        <div class="col-3 col-md-2">
+                            <a href="index.html">
+                                <img class="logo logo-dark" alt="logo" src="img/logo-dark.png" />
+                                <img class="logo logo-light" alt="logo" src="img/logo-light.png" />
+                            </a>
+                        </div>
                         <div class="col-9 col-md-10 text-right">
                             <a href="#" class="hamburger-toggle" data-toggle-class="#menu1;hidden-xs">
                                 <i class="icon icon--sm stack-interface stack-menu"></i>
@@ -64,8 +54,6 @@
                     <hr>
 
                 </div>
-            </section>
-            <section>
                 <div class="container pos-vertical-center">
                     <div class="row justify-content-around">
                         
